Developer Fundamentals 3 - slideovers

--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -16,6 +16,8 @@ format:
     view-distance: 2
     logo: /validmind.png
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    revealjs-plugins:
+      - slideover
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
     output-file: _implementing-custom-tests.html
@@ -183,13 +185,10 @@ Let's continue our journey with **Section 1** on the next page. {{< fa hand-poin
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
+:::: {.slideover--r .three-quarters}
 **3 — Integrate custom tests**
 
-::: {.f6}
 This is the third notebook in our introductory series, which will walk you through how to implement different types of custom tests with {{< var vm.product >}}.
-
-:::
 
 **Scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -243,16 +242,13 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Connect to your model**
 
-::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -281,16 +277,13 @@ Let's implement a custom *inline test* that calculates the confusion matrix for 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#create-a-confusion-matrix-plot" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Create a custom test**
 
-::: {.f6}
 The [`@vm.test` wrapper](/validmind/validmind.qmd#test){target="_blank"} allows you to create a reusable test:
 
 1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells in the following section under Implementing a custom inline test: **Create a confusion matrix plot**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -298,16 +291,15 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#add-parameters-to-custom-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Adjust your custom test**
 
-::: {.f6}
 Custom tests can take parameters just like any other function:
 
 1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
-2. Run all the cells in the following sections under Implementing a custom inline test: **Add parameters to custom tests** / **Pass parameters to custom tests**
-
-:::
+2. Run all the cells in the following sections under Implementing a custom inline test:
+    - **Add parameters to custom tests**
+    - **Pass parameters to custom tests**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -315,21 +307,17 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#log-the-confusion-matrix-results" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Log your custom test**
 
-::: {.f6}
 Use the [`.log()` method](/validmind/validmind/vm_models.qmd#log){target="_blank"} to send the results of your custom test to the {{< var validmind.platform >}}:
 
 1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run the cell in the following section under Implementing a custom inline test: **Log the confusion matrix results**
 
-:::
-
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 # Use external test providers {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -356,16 +344,13 @@ Creating inline custom tests with a function is a great way to customize your mo
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#create-custom-tests-folder" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Create custom tests folder**
 
-::: {.f6}
 Create a new folder that will contain reusable custom tests from your existing inline tests:
 
 1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run the cell under the following Using external test providers section: **Create custom tests folder**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -373,16 +358,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#save-an-inline-test" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Save inline test**
 
-::: {.f6}
 The `@vm.test` decorator also includes a convenience method that allows you to save the test to a Python file at a specified path:
 
 1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells under the Using external test providers section: **Save an inline test**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -390,16 +372,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#register-a-local-test-provider" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Register local test provider**
 
-::: {.f6}
 Next, let's initialize a test provider that will tell the {{< var validmind.developer >}} where to find your saved custom tests:
 
 1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells under the Using external test providers section: **Register a local test provider**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -440,7 +419,7 @@ With the custom test results logged, let's head to the model we connected to at 
 5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
 
     - Click on **Custom** under [test-driven]{.smallcaps} in the left sidebar.
-    - Select the two custom `ConfusionMatrix` tests you logged above:
+    - Select the two custom `ConfusionMatrix` tests you logged previously:
 
     ![The ConfusionMatrix tests selected](/notebooks/tutorials/model_development/selecting-confusion-matrix-test.png){fig-alt="Screenshot showing the ConfusionMatrix tests selected" .screenshot}
 
@@ -454,30 +433,30 @@ With the custom test results logged, let's head to the model we connected to at 
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
 **Insert custom test-driven blocks**
 
-::: {.f6}
-3.2 Model Evaluation — `my_custom_tests.ConfusionMatrix:test_dataset_normalized` / `my_test_provider.ConfusionMatrix`
-
-:::
+1. Select the model you connected to earlier.
+2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. Locate the Data Preparation section and click on **3.2 Model Evaluation** to expand that section.
+4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
+5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
+    - Click on **Custom** under [test-driven]{.smallcaps} in the left sidebar.
+    - Select the two custom `ConfusionMatrix` tests you logged previously.
+6. Finally, click **Insert 2 Test Results to Document** to add the test results to the documentation.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-
-
 # Section 2 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
+:::: {.slideover--r .three-quarters}
 **4 — Finalize testing and documentation**
 
-::: {.f6}
 This is the final notebook in our introductory series, which will walk you through wrapping custom test results into your documentation, as well as how to update the configuration for the entire model documentation template to suit your needs.
-:::
 
 **Scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -524,16 +503,13 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Connect to your model**
 
-::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -543,16 +519,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#reconnect-to-validmind" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Reconnect to {{< var vm.product >}}**
 
-::: {.f6}
 After you insert test-driven blocks, changes should persist and become available every time you call the [`preview_template()` function](/validmind/validmind.qmd#preview_template){target="_blank"}:
 
 1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run all the cells under the **Reconnect to {{< var vm.product >}}** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -560,16 +533,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#include-custom-test-results" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Log custom test results**
 
-::: {.f6}
 Now that your custom test IDs are part of your template, you can now run tests for an entire section and all additional custom tests will be loaded:
 
 1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run the cell under the **Include custom test results** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -606,14 +576,11 @@ The utility function `vm.get_test_suite().get_default_config()` will return the 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#documentation-template-configuration" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Retrieve default configuration**
 
-::: {.f6}
 1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run the first cell under the **Documentation template configuration** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -621,16 +588,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#update-the-config" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Update template configuration**
 
-::: {.f6}
 The default configuration does not assign any inputs to a test, but you can assign inputs to individual tests as needed:
 
 1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run the all the cells under the following Documentation template configuration section: **Update the config**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
