notebooks: Pulling in new Quickstart for model validation notebook (#731)
* Latest notebooks from beck/sc-10339/create-code-samples-notebook-quickstart-for

* Linking new validation quickstart

* New notebook edits

* More updates

* Pulled in the changes from VAlidmind-library

---------

Co-authored-by: Lois Ansah <loiscodes@gmail.com>

--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -16,9 +16,10 @@ listing:
     grid-columns: 2
     contents:
     - ../notebooks/quickstart/quickstart_model_documentation.ipynb
-    - path: https://youtu.be/rIR8Mql7eGs
-      title: "{{< fa brands youtube >}} {{< var vm.product >}} QuickStart"
-      description: "Watch the walkthrough on YouTube: `https://youtu.be/rIR8Mql7eGs`"
+    - ../notebooks/quickstart/quickstart_model_validation.ipynb
+    # - path: https://youtu.be/rIR8Mql7eGs
+    #   title: "{{< fa brands youtube >}} {{< var vm.product >}} QuickStart"
+    #   description: "Watch the walkthrough on YouTube: `https://youtu.be/rIR8Mql7eGs`"
   - id: model-development
     type: grid
     grid-columns: 2
@@ -106,9 +107,9 @@ The {{< var validmind.developer >}} is designed to be model agnostic. If your mo
 
 :::
 
-## QuickStart
+## Quickstart
 
-After you [**sign up**](/guide/configuration/accessing-validmind.qmd) for {{< var vm.product >}} to get access, try our QuickStart:
+After you [**sign up**](/guide/configuration/accessing-validmind.qmd) for {{< var vm.product >}} to get access, try our quickstarts for model documentation or validation:
 
 :::{#library-quickstart}
 :::
