--- a/site/notebooks/quickstart/quickstart_model_documentation.ipynb
+++ b/site/notebooks/quickstart/quickstart_model_documentation.ipynb
@@ -617,7 +617,7 @@
     "\n",
     "### Assign predictions\n",
     "\n",
-    "Once the model has been registered you can assign model predictions to the training and testing datasets.\n",
+    "Once the model has been registered, you can assign model predictions to the training and testing datasets.\n",
     "\n",
     "- The [`assign_predictions()` method](https://docs.validmind.ai/validmind/validmind/vm_models.html#assign_predictions) from the `Dataset` object can link existing predictions to any number of models.\n",
     "- This method links the model's class prediction values and probabilities to our `vm_train_ds` and `vm_test_ds` datasets.\n",
@@ -755,7 +755,7 @@
     "\n",
     "2. In the left sidebar that appears for your model, click **Documentation**.\n",
     "\n",
-    "What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/working-with-model-documentation.html)"
+    "    What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/working-with-model-documentation.html)"
    ]
   },
   {
