--- a/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
+++ b/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
@@ -202,13 +202,19 @@
     "\n",
     "In order to log tests as a validator instead of as a developer, on the model details page that appears after you've successfully registered your sample model:\n",
     "\n",
-    "1. Remove yourself as a developer: \n",
+    "1. Remove yourself as a model owner: \n",
+    "\n",
+    "    - Click on the **OWNERS** tile.\n",
+    "    - Click the **x** next to your name to remove yourself from that model's role.\n",
+    "    - Click **Save** to apply your changes to that role.\n",
+    "\n",
+    "2. Remove yourself as a developer: \n",
     "\n",
     "    - Click on the **DEVELOPERS** tile.\n",
     "    - Click the **x** next to your name to remove yourself from that model's role.\n",
     "    - Click **Save** to apply your changes to that role.\n",
     "\n",
-    "2. Add yourself as a validator: \n",
+    "3. Add yourself as a validator: \n",
     "\n",
     "    - Click on the **VALIDATORS** tile.\n",
     "    - Select your name from the drop-down menu.\n",
@@ -1358,9 +1364,9 @@
     "\n",
     "## Run diagnostic tests\n",
     "\n",
-    "Next we want to inspect the robustness and stability testing comparison between our champion and challenger model.\n",
+    "Next, we want to inspect the robustness and stability testing comparison between our champion and challenger model.\n",
     "\n",
-    "Use `list_tests()` to identify all the model diagnosis tests for classification:"
+    "Use `list_tests()` to list all available diagnosis tests applicable to classification tasks:"
    ]
   },
   {
