--- a/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
+++ b/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
@@ -520,7 +520,7 @@
     "\n",
     "## Running model evaluation tests\n",
     "\n",
-    "With everything ready for us, let's run the rest of our validation tests. We'll focus on comprehensive testing around model performance of both the champion and challenger models going forward as we've already verified the data quality of the datasets used to train the champion model."
+    "With our setup complete, let's run the rest of our validation tests. Since we have already verified the data quality of the dataset used to train our champion model, we will now focus on comprehensive performance evaluations of both the champion and challenger models."
    ]
   },
   {
@@ -584,7 +584,10 @@
     "\n",
     "#### Evaluate performance of the champion model\n",
     "\n",
-    "Now, let's run and log our batch of model performance tests using our testing dataset (`vm_test_ds`) for our champion model:"
+    "Now, let's run and log our batch of model performance tests using our testing dataset (`vm_test_ds`) for our champion model:\n",
+    "\n",
+    "- The test set serves as a proxy for real-world data, providing an unbiased estimate of model performance since it was not used during training or tuning.\n",
+    "- The test set also acts as protection against selection bias and model tweaking, giving a final, more unbiased checkpoint."
    ]
   },
   {
@@ -725,9 +728,9 @@
     "\n",
     "### Run diagnostic tests\n",
     "\n",
-    "Next we want to inspect the robustness and stability testing comparison between our champion and challenger model.\n",
+    "Next, we want to inspect the robustness and stability testing comparison between our champion and challenger model.\n",
     "\n",
-    "Use `list_tests()` to identify all the model diagnosis tests for classification:"
+    "Use `list_tests()` to list all available diagnosis tests applicable to classification tasks:"
    ]
   },
   {
@@ -743,9 +746,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see if models suffer from any *overfit* potentials and also where there are potential sub-segments of issues with the [`OverfitDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/OverfitDiagnosis.html). \n",
+    "Let’s now assess the models for potential signs of *overfitting* and identify any sub-segments where performance may inconsistent with the [`OverfitDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/OverfitDiagnosis.html).\n",
     "\n",
-    "Overfitting occurs when a model learns the training data too well, capturing not only the true pattern but noise and random fluctuations resulting in excellent performance on the training dataset but poor generalization to new, unseen data."
+    "Overfitting occurs when a model learns the training data too well, capturing not only the true pattern but noise and random fluctuations resulting in excellent performance on the training dataset but poor generalization to new, unseen data:\n",
+    "\n",
+    "- Since the training dataset (`vm_train_ds`) was used to fit the model, we use this set to establish a baseline performance for how well the model performs on data it has already seen.\n",
+    "- The testing dataset (`vm_test_ds`) was never seen during training, and here simulates real-world generalization, or how well the model performs on new, unseen data. "
    ]
   },
   {
@@ -767,9 +773,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's also conduct *robustness* and *stability* testing of the two models with the [`RobustnessDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/RobustnessDiagnosis.html).\n",
+    "Let's also conduct *robustness* and *stability* testing of the two models with the [`RobustnessDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/RobustnessDiagnosis.html). Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets.\n",
     "\n",
-    "Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets."
+    "Again, we'll use both the training and testing datasets to establish baseline performance and to simulate real-world generalization:"
    ]
   },
   {
@@ -809,6 +815,13 @@
     "# Store the feature importance tests\n",
     "FI = vm.tests.list_tests(tags=[\"feature_importance\"], task=\"classification\",pretty=False)\n",
     "FI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll only use our testing dataset (`vm_test_ds`) here, to provide a realistic, unseen sample that mimic future or production data, as the training dataset has already influenced our model during learning:"
    ]
   },
   {
