Developer Fundamentals 4 - slideovers

--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -165,11 +165,8 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ## {background-iframe="/developer/model-testing/test-descriptions.html" background-interactive="true" data-preload="yes"}
 
-::: {.slideover--l .three-quarters .auto-collapse-5}
-::: {.tc}
+:::: {.slideover--l .three-quarters .auto-collapse-5}
 **{{< var vm.product >}} test repository**
-
-:::
 
 {{< var vm.product >}} provides a wealth out-of-the-box of tests to help you ensure that your model is being built appropriately.
 
@@ -177,7 +174,7 @@ In this module, you'll become familiar with the individual tests available in {{
 
 For now, **scroll through these test descriptions** to explore. When you're done, click [{{< fa chevron-right >}}]() to continue.
 
-:::
+::::
 
 ## Get your code snippet
 
@@ -396,11 +393,12 @@ With the test results logged, let's head to the model we connected to at the beg
 :::
 ::::
 
-
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Insert a test-driven block**
+:::
 
 1. Select the model you connected to earlier.
 2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
@@ -415,7 +413,6 @@ With the test results logged, let's head to the model we connected to at the beg
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 # Test an existing model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -466,7 +463,7 @@ In this next example, we’ll focus on running the tests within the Model Develo
 Using {{< var vm.product >}} tests, we'll train a simple logistic regression model on our dataset and evaluate its performance:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run all the cells under the Model testing section: **Train simple logistic regression model**.
+2. Run all the cells under the Model testing section: **Train simple logistic regression model**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -480,7 +477,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Use the `init_dataset()` and [`init_model()` functions](/validmind/validmind.qmd#init_model){target="_blank"} to initialize these objects:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the cell under the following Model testing section: **Initialize model evaluation objects**.
+2. Run the cell under the following Model testing section: **Initialize model evaluation objects**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -493,7 +490,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Use the [`assign_predictions()` method](/validmind/validmind/vm_models.qmd#assign_predictions){target="_blank"} from the `Dataset` object to link existing predictions to any number of models:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the cell under the following Model testing section: **Assign predictions**.
+2. Run the cell under the following Model testing section: **Assign predictions**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
