--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -158,7 +158,7 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ## {background-iframe="https://app.prod.validmind.ai" background-interactive="true" data-preload="yes"}
 
-::: {.slideover--r}
+:::: {.slideover--r}
 **Welcome to the {{< var validmind.platform >}}**
 
 From here, you can:
@@ -177,11 +177,11 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 When you're done navigating around, click [{{< fa chevron-right >}}]() to continue.
 
-:::
+::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-::: {.slideover--r}
+:::: {.slideover--r}
 **Welcome to the {{< fa cubes >}} Inventory**
 
 Use the model inventory to track comprehensive details for all your models throughout the model lifecycle.
@@ -198,7 +198,7 @@ To start the documentation process, a model must already be registered in the mo
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/?register=open" background-interactive="true" data-preload="yes"}
 
-::: {.slideover--r .three-quarters .auto-collapse-10}
+:::: {.slideover--r .three-quarters .auto-collapse-10}
 **Register a binary classification model**
 
 1. Select the option for a new model:
