Developer Fundamentals slideovers - proofreading

--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -232,7 +232,7 @@ With your code snippet copied to your clipboard:
 1. Open **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the following cells in the Setting up section:
     - **Initialize the {{< var validmind.developer >}}**
-    - **Import sample dataset**.
+    - **Import sample dataset**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -278,7 +278,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 You run individual tests by calling the [`run_test()` function](/validmind/validmind/tests.qmd#run_test){target="_blank"} provided by the `validmind.tests` module:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run all the cells under the Running tests section: **Run tabular data tests**.
+2. Run all the cells under the Running tests section: **Run tabular data tests**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -292,7 +292,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 You can utilize the output from a ValidMind test for further use, for example, if you want to remove highly correlated features:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run all the cells under the Running tests section: **Utilize test output**.
+2. Run all the cells under the Running tests section: **Utilize test output**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -333,7 +333,7 @@ Every test result returned by the `run_test()` function has a `.log()` method th
 The [`run_documentation_tests()` function](/validmind/validmind.qmd#run_documentation_tests){target="_blank"} allows you to run multiple tests at once and automatically log the results to your documentation:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cell in the Documenting results section: **Run and log multiple tests**.
+2. Run the following cell in the Documenting results section: **Run and log multiple tests**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -347,7 +347,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Next, we'll run an individual test and log the result to the {{< var validmind.platform >}}:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cell in the Running tests section: **Run and log an individual test**.
+2. Run the following cell in the Running tests section: **Run and log an individual test**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -487,6 +487,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 :::: {.slideover--r .three-quarters}
 **Assign predictions**
+
 Use the [`assign_predictions()` method](/validmind/validmind/vm_models.qmd#assign_predictions){target="_blank"} from the `Dataset` object to link existing predictions to any number of models:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
@@ -504,7 +505,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Finally, we'll run only the tests within the Model Development section of the model documentation:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the cell under the following Model testing section: **Run the model evaluation tests**.
+2. Run the cell under the following Model testing section: **Run the model evaluation tests**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
