--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -184,9 +184,7 @@ When you're done navigating around, click [{{< fa chevron-right >}}]() to contin
 :::: {.slideover--r}
 **Welcome to the {{< fa cubes >}} Inventory**
 
-Use the model inventory to track comprehensive details for all your models throughout the model lifecycle.
-
-The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
+Use the model inventory to track comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
 
 ::: {.f6 .pl3 .pr3 .embed}
 To start the documentation process, a model must already be registered in the model inventory via the **{{< fa plus >}} Register Model** modal.
@@ -203,10 +201,8 @@ To start the documentation process, a model must already be registered in the mo
 
 1. Select the option for a new model:
 - **Documentation template** — <br>`Binary classification`
-- **Use case** — <br>`Attrition/Churn Management`
-
+- **Use case** — <br>`Attrition/Churn Management`<br><br>
   You can fill in other options according to your preference.
-
 2. Click **{{< fa plus >}} Register Model** to add the model to your inventory.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -329,7 +325,7 @@ Try it **live** on the next page. {{< fa hand-point-right >}}
 
 Once you've called `preview_template()`:
 
-1. From the model inventory, select the name of your model to open up the model details page.
+1. Select the name of your model to open up the model details page.
 2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Note how the structure of the Document Overview reflects the previewed template.
 
